--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.bg-red {
+  background :red;
+  display: flex;
+}
+.left-side {
+  width: 20%;
+  background-color: antiquewhite;
+};
+
+.right-side {
+  width: 80%;
+  background-color: orange;
+}
